# DecentEthereum

./: CMakeLists.txt
include/DecentEthereum/Common/: SubmoduleLogging.hpp
include/DecentEthereum/Trusted/: BlockchainMgr.hpp  DataType.hpp  HostBlockService.hpp  RandomGenerator.hpp  ReceiptSubscriber.hpp  Timestamper.hpp  Transaction.hpp
include/DecentEthereum/Trusted/Pubsub/: SubscriberHandler.hpp  SubscriberService.hpp
include/DecentEthereum/Untrusted/: BlockReceiver.hpp  DecentEthereumEnclave.hpp  GethRequester.hpp  HostBlockService.hpp  HostBlockServiceTasks.hpp
src/: CMakeLists.txt  components_config.json
src/Trusted/: Certs.hpp  Enclave.cpp  Enclave.edl  Keys.hpp
src/Untrusted/: DecentEthereumEnclave.hpp  Main.cpp  RunUntilSignal.hpp
tests/: CMakeLists.txt  EvalPlot.py
tests/geth-decent-throughput-eval/: CMakeLists.txt  components_config.json
tests/geth-decent-throughput-eval/Trusted/: Enclave.cpp  Enclave.edl
tests/geth-decent-throughput-eval/Untrusted/: DecentEthereumEnclave.hpp  Main.cpp
tests/geth-go-throughput-eval/: main.go
